--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 div {
     
-  border: red 5px solid
+  /*border: red 1px solid*/
 }
 
-.grid-container {
+/*.grid-container {
     display: grid;
     height: 600px;
     width: 600px;
@@ -11,18 +11,36 @@ div {
     border: 1px solid rgb(156, 156, 156);
     margin-left: auto;
     margin-right: auto;
-}
+}*/
 
-.grid-item {
+/*.grid-item {
     background-color: rgb(255, 255, 255);
     width:10px;
     height:10px;
     border: red 5px solid
-} 
+} */
 
 #boxes {
     
-    border: red 5px solid;
+    /*border: red 5px solid;*/
     display: flex;
+    width: 200px;
+    height: 200px;
+    align-items: center;
+    flex-direction: column;
+
 }
+
+.square {
+    display: flex;
+    border: red 1px solid;
+    height: 50px;
+    width:50px
+}
+
+.row {
+    display: flex;
+    border: red 1px solid;
+}
+
 
